# embedding_model

./: CMakeLists.txt  README.md  word2vec.py
plugin/: pybindword2vec.cpp  pybindword2vec.hpp  word2vec.cpp  word2vec.hpp
